# MC3D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MC3DConfig.cmake.in  README.md
cli/: CMakeLists.txt  main.cpp
cmake/: FindGMP.cmake  FindGMPXX.cmake  MC3DMacros.cmake  MC3DTestMacros.cmake  macrOS.cmake
include/MC3D/: Types.hpp  Util.hpp
include/MC3D/Algorithm/: MCBuilder.hpp  MCReducer.hpp  MotorcycleSpawner.hpp  MotorcycleTracer.hpp  SingularityInitializer.hpp  TetRemesher.hpp
include/MC3D/Data/: BlockData.hpp  Motorcycle.hpp  NodeCoordination.hpp  NodeType.hpp  Transition.hpp  UVWDir.hpp
include/MC3D/Interface/: MCGenerator.hpp  Reader.hpp  Writer.hpp
include/MC3D/Mesh/: MCMeshManipulator.hpp  MCMeshNavigator.hpp  MCMeshProps.hpp  MeshPropsInterface.hpp  TetMeshManipulator.hpp  TetMeshNavigator.hpp  TetMeshProps.hpp
src/: CMakeLists.txt
src/Algorithm/: MCBuilder.cpp  MCReducer.cpp  MotorcycleSpawner.cpp  MotorcycleTracer.cpp  SingularityInitializer.cpp  TetRemesher.cpp
src/Data/: Motorcycle.cpp  NodeCoordination.cpp  Transition.cpp  UVWDir.cpp
src/Interface/: MCGenerator.cpp  Reader.cpp  Writer.cpp
src/Mesh/: MCMeshManipulator.cpp  MCMeshNavigator.cpp  MCMeshProps.cpp  TetMeshManipulator.cpp  TetMeshNavigator.cpp  TetMeshProps.cpp
tests/: BlackBoxTest.cpp  CMakeLists.txt  InitializerTest.cpp  MCBuilderTest.cpp  MCReducerTest.cpp  MotorcycleSpawnerTest.cpp  MotorcycleTracerTest.cpp  ReaderTest.cpp  TestUtils.cpp  TestUtils.hpp
tests/resources/: fancy_ring.hexex  fancy_ring_q.hexex  hand.hexex  hand_q.hexex  minimal.hexex  minimal_invalid_charts.hexex  minimal_missing_tets.hexex  minimal_missing_uvw.hexex  minimal_missing_vertices.hexex  rockerarm_q.hexex
viewer-demo/: CMakeLists.txt  main.cpp
